--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
+<!--
+  ~ Created by Inuwa Ibrahim on 17/03/2022, 7:43 PM
+  ~     https://linktr.ee/Ibrajix
+  ~     Copyright (c) 2022.
+  ~     All rights reserved.
+  -->
+
 <resources>
     <string name="app_name">Nft App</string>
     <string name="nft_marketplace">NFT Marketplace</string>
